NXP-30226: Generate statistics for explorer exports